--- a/css/style.css
+++ b/css/style.css
@@ -3386,7 +3386,7 @@ input[type="button"].btn-block {
 
 .nav-tabs {
   border-bottom: 1px solid #dee2e6; }
-  .nav-tabs .nav-item {
+  .nav-tabs {
     margin-bottom: -1px; }
   .nav-tabs .nav-link {
     border: 1px solid transparent;
@@ -3466,11 +3466,12 @@ input[type="button"].btn-block {
 
 .navbar-brand {
   display: inline-block;
-  padding-top: 0.3125rem;
+  padding-top: 0.3125rem;  
   padding-bottom: 0.3125rem;
   margin-right: 1rem;
   font-size: 1.25rem;
   line-height: inherit;
+  margin-bottom: 20px;
   white-space: nowrap; }
   .navbar-brand:hover, .navbar-brand:focus {
     text-decoration: none; }
@@ -3544,7 +3545,7 @@ input[type="button"].btn-block {
     -webkit-box-pack: start;
     -ms-flex-pack: start;
     justify-content: flex-start; }
-    .navbar-expand-sm .navbar-nav {
+    .navbar-expand-sm  {
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -8029,7 +8030,7 @@ h1, h2, h3, h4, h5,
 .ftco-navbar-light {
   background: transparent !important;
   position: absolute;
-  top: 20px;
+  top: 0px;
   left: 0;
   right: 0;
   z-index: 3; }
@@ -8056,7 +8057,8 @@ h1, h2, h3, h4, h5,
     font-weight: 400;
     opacity: 1 !important; }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
-      color: black; }
+      color: black;
+      background-color: #fff; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
         padding-left: 0;
@@ -8110,7 +8112,9 @@ h1, h2, h3, h4, h5,
     border: 1px solid #2c2f3a;
     background: #2c2f3a !important; }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: black; }
+    color: #f14567;
+    text-transform: uppercase;
+    font-weight: bold; }
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: rgba(255, 255, 255, 0.5) !important;
@@ -8224,11 +8228,11 @@ h1, h2, h3, h4, h5,
     opacity: .5;
     background: #000000; }
   .hero-wrap.hero-wrap-2 {
-    height: 700px; }
+    height: 200px; }
     .hero-wrap.hero-wrap-2 .overlay {
       opacity: .3; }
     .hero-wrap.hero-wrap-2 .slider-text {
-      height: 700px; }
+      height: 300px; }
 
 @-webkit-keyframes blinker {
   from {
@@ -8301,9 +8305,9 @@ h1, h2, h3, h4, h5,
     .slider-text .breadcrumbs span a {
       color: rgba(255, 255, 255, 0.7); }
       .slider-text .breadcrumbs span a:hover, .slider-text .breadcrumbs span a:focus {
-        color: #afa939; }
+        color: #420d0d; }
         .slider-text .breadcrumbs span a:hover i, .slider-text .breadcrumbs span a:focus i {
-          color: #afa939; }
+          color: #420d0d; }
 
 .slider-text .bread {
   font-weight: 700 !important; }
@@ -8560,16 +8564,21 @@ h1, h2, h3, h4, h5,
 
 .practice-area {
   display: block;
+  position: absolute;
   margin-bottom: 40px;
   padding: 20px;
   height: 320px;
+  padding-bottom: 20px;
   border: 3px solid black;
   box-shadow: 7px 7px 7px rgba(0,0,0);
   position: relative; }
+
   @media (max-width: 767.98px) {
     .practice-area {
       border-left: none;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.08); } }
+      border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+      overflow: hidden; 
+      text-overflow: ellipsis;} }
   .practice-area .icon {
     width: 100px;
     height: 100px;
@@ -8606,7 +8615,7 @@ h1, h2, h3, h4, h5,
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background: #afa939;
+    background: #420d0d;
     margin: 0 auto;
     opacity: 0;
     -moz-transition: all 0.3s ease;
@@ -8616,13 +8625,15 @@ h1, h2, h3, h4, h5,
     transition: all 0.3s ease; }
     .practice-area .btn-custom span {
       color: #fff; }
-  /*.practice-area:hover .icon, .practice-area:focus .icon {
-    background: #afa939; }
+  .practice-area:hover .icon, .practice-area:focus .icon {
+    background: black;
+    color: white;
+     }
     .practice-area:hover .icon span, .practice-area:focus .icon span {
       color: #fff; }
   .practice-area:hover .btn-custom, .practice-area:focus .btn-custom {
     opacity: 1;
-    bottom: -25px; }*/
+    bottom: -25px; }
 
 .case {
   height: 300px;
@@ -9456,12 +9467,15 @@ textarea.form-control {
       top: 0;
       color: #ccc; }
     .categories li a:hover, .categories li a:focus, .sidelink li a:hover, .sidelink li a:focus {
-      outline: none;
-      color: #afa939; }
+      text-transform: uppercase;
+      color: #420d0d; 
+      font-weight: bold;}
   .categories li.active a, .sidelink li.active a {
-    color: #afa939; }
+    color: #420d0d;
+    font-weight: bold;
+    text-transform: uppercase; }
     .categories li.active a span, .sidelink li.active a span {
-      color: #afa939; }
+      color: #420d0d; }
 
 .block-2 {
   margin-bottom: 0;
@@ -9710,3 +9724,24 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+.textadd{
+  font-weight: 600;
+  margin-bottom: 30px;
+  padding: 12px;
+  border: 3px solid #420d0d;
+  border-radius: 5px;
+  box-shadow: 7px 7px 7px #420d0d;
+}
+
+.field{
+  margin-top: 15px;
+  width: 150px;
+  border: 2px solid #420d0d;
+  box-shadow: 3px 3px 3px #420d0d;
+}
+
+.field1{
+  margin-left: 15px;
+
+}
